--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,13 @@ authors=[
 ]
 license ="LGPL-3.0-only"
 dependencies = [
-"python-dateutil"]
+    "python-dateutil",
+]
 
 [project.urls]
 Repository="https://github.com/Harlequelrah/Library-ElrahPy"
 Documentation="https://harlequelrah.github.io/Library-ElrahPy/docs/documentation"
 
 [build-system]
-requires=["hachling"]
-build-backend = "hachling.build"
+requires=["hatchling"]
+build-backend = "hatchling.build"
