--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ authors=[
 ]
 license ="LGPL-3.0-only"
 dependencies = [
+    "pytest>=9.0.2",
+    "pytest-mock>=3.15.1",
     "python-dateutil",
 ]
 
