--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,4 @@
 title: ElrahPy Documentation
 description: Package python utilitaire
-remote_theme: pages-themes/Hacker
-
-# Si vous utilisez le dossier /docs pour vos fichiers
+remote_theme: pages-themes/hacker
 include: [docs]
