modification du _config.yml pour utiliser theme plutot que remote-theme

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: ElrahPy Documentation
 description: Package python utilitaire
-remote_theme: pages-themes/hacker
+theme: jekyll-theme-hacker
 include: [docs]
