--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 title: ElrahPy Documentation
 description: Package python utilitaire
-theme : hacker
-
-show_downloads: true
-
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+- jekyll-remote-theme # 
