--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
 title: ElrahPy Documentation
 description: Package python utilitaire
-remote_theme: pages-themes/hacker@v0.2.0
-plugins:
-- jekyll-remote-theme # 
+theme : cayman
